--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 </head>
 
 <body>
-    <div id="status" name="status"></div>
     <input id="title" type="text" name="title" value="thing">
-    <input id="prograss" type="number" name="prograss" value="prograss">
-    <input id="amount" type="number" name="amount" value="all">
+    <input id="prograss" type="number" name="prograss" value="0">
+    <input id="amount" type="number" name="amount" value="100">
     <button id="add" name="add" onclick="addData()">添加</button>
-    <button id="delete" name="delete" onclick="deleteData()">删除</button>
-    <div id="alert" name="alert"></div>
+    <div id="alert" name="alert">　</div>
+    <div id="status" name="status">List:</div>
 </body>
 
 <script type="text/javascript" src="src/lunch.js"></script>
